# cmd/core/entities/blacklistEntities/blacklistedHost.go
@@ -19,7 +19,7 @@ type BlacklistedHost struct {
 	SourceID uint64           `json:"SourceID" gorm:"column:source_id"`
 
 	// ImportEvent describes import session from where blacklisted host was added
-	ImportEvent   *BlacklistImportEvent `json:"ImportEvent,omitempty" gorm:"foreignKey:SourceID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+	ImportEvent   *BlacklistImportEvent `json:"ImportEvent,omitempty"`
 	ImportEventID *uint64               `json:"ImportEventID" gorm:"column:import_event_id"`
 
 	// DiscoveredAt sets date of discovery, provided by source or inserted automatically on create
