# cmd/core/entities/blacklistEntities/blacklistedURL.go
@@ -18,7 +18,7 @@ type BlacklistedURL struct {
 	SourceID uint64           `json:"SourceID" gorm:"uniqueIndex:idx_url"`
 
 	// ImportEvent describes import session from where blacklisted host was added
-	ImportEvent   *BlacklistImportEvent `json:"ImportEvent,omitempty" gorm:"foreignKey:SourceID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+	ImportEvent   *BlacklistImportEvent `json:"ImportEvent,omitempty" gorm:"foreignKey:ImportEventID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
 	ImportEventID *uint64               `json:"ImportEventID" gorm:"column:import_event_id"`
 
 	// DiscoveredAt sets date of discovery, provided by source or inserted automatically on create
