# docs/swagger/swagger.json
@@ -356,6 +356,13 @@
                         "name": "discovered_at",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "other types extraction",
+                        "name": "extract_all",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -388,8 +395,22 @@
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "files to import",
+                        "description": "file to import",
                         "name": "file_upload",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "discovery date",
+                        "name": "discovered_at",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "other types extraction",
+                        "name": "extract_all",
                         "in": "formData",
                         "required": true
                     }
@@ -800,6 +821,29 @@
         }
     },
     "definitions": {
+        "blacklistEntities.BlacklistImportEvent": {
+            "type": "object",
+            "properties": {
+                "CreatedAt": {
+                    "type": "string"
+                },
+                "DeletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "ID": {
+                    "type": "integer"
+                },
+                "IsComplete": {
+                    "type": "boolean"
+                },
+                "Summary": {
+                    "$ref": "#/definitions/datatypes.JSONType-blacklistEntities_BlacklistImportEventSummary"
+                },
+                "Type": {
+                    "type": "string"
+                }
+            }
+        },
         "blacklistEntities.BlacklistSource": {
             "type": "object",
             "properties": {
@@ -838,6 +882,17 @@
                 "DiscoveredAt": {
                     "description": "DiscoveredAt sets date of discovery, provided by source or inserted automatically on create",
                     "type": "string"
+                },
+                "ImportEvent": {
+                    "description": "ImportEvent describes import session from where blacklisted host was added",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/blacklistEntities.BlacklistImportEvent"
+                        }
+                    ]
+                },
+                "ImportEventID": {
+                    "type": "integer"
                 },
                 "Source": {
                     "description": "Defines source from where blacklisted host was added",
@@ -880,8 +935,19 @@
                 "Host": {
                     "type": "string"
                 },
+                "ImportEvent": {
+                    "description": "ImportEvent describes import session from where blacklisted host was added",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/blacklistEntities.BlacklistImportEvent"
+                        }
+                    ]
+                },
+                "ImportEventID": {
+                    "type": "integer"
+                },
                 "Source": {
-                    "description": "Defines source from where blacklisted host was added",
+                    "description": "Source defines source from where blacklisted host was added",
                     "allOf": [
                         {
                             "$ref": "#/definitions/blacklistEntities.BlacklistSource"
@@ -925,6 +991,17 @@
                 "IPAddress": {
                     "$ref": "#/definitions/pgtype.Inet"
                 },
+                "ImportEvent": {
+                    "description": "ImportEvent describes import session from where blacklisted host was added",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/blacklistEntities.BlacklistImportEvent"
+                        }
+                    ]
+                },
+                "ImportEventID": {
+                    "type": "integer"
+                },
                 "Source": {
                     "description": "Defines source from where blacklisted host was added",
                     "allOf": [
@@ -960,6 +1037,17 @@
                     "description": "DiscoveredAt sets date of discovery, provided by source or inserted automatically on create",
                     "type": "string"
                 },
+                "ImportEvent": {
+                    "description": "ImportEvent describes import session from where blacklisted host was added",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/blacklistEntities.BlacklistImportEvent"
+                        }
+                    ]
+                },
+                "ImportEventID": {
+                    "type": "integer"
+                },
                 "MD5": {
                     "type": "string"
                 },
@@ -993,6 +1081,9 @@
             "x-enum-varnames": [
                 "HostStatusNew"
             ]
+        },
+        "datatypes.JSONType-blacklistEntities_BlacklistImportEventSummary": {
+            "type": "object"
         },
         "error.APIError": {
             "type": "object",
